<resources>
    <string name="app_name">4Sight - Myopia Examination</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_glasses">Glasses</string>
    <string name="worst">
        Your vision is estimated to be worse than 20/200. This is very serious and we would recommend seeking treatment immediately.
        You are at a high risk of day-to-day life accidents and should not operate a vehicle at this visual acuity.
    </string>
    <string name="info20200">
Your vision is estimated at 20/200 in this eye. The smallest letters read by somebody with 20/200 vision at 20 feet could be read at 200 feet by a person with normal (20/20) visual acuity.
Generally, in the US, individuals are required to wear corrective lenses if their vision is worse than 20/40 when driving to prevent automobile accidents. If you drive a vehicle, you should look into some form of visual aid.
Someone with 20/200 vision will be 10 times slower to spot a potential hazard in the distance compared to a person with 20/20 vision.
    </string>
    <string name="info20100">
        Your vision is estimated at 20/100 in this eye. The smallest letters read by somebody with 20/100 vision at 20 feet could be read at 100 feet by a person with normal (20/20) visual acuity.
Generally, in the US, individuals are required to wear corrective lenses if their vision is worse than 20/40 when driving to prevent automobile accidents. If you drive a vehicle, you should look into some form of visual aid.
Someone with 20/100 vision will be 5 times slower to spot a potential hazard in the distance compared to a person with 20/20 vision.


    </string>
    <string name="info2070">
Your vision is estimated at 20/70 in this eye. The smallest letters read by somebody with 20/70 vision at 20 feet could be read at 70 feet by
a person with normal (20/20) visual acuity.
Generally, in the US, individuals are required to wear corrective lenses if their vision is worse than 20/40 when driving to prevent automobile accidents. If you drive a vehicle, you should look into some form of visual aid.
Someone with 20/70 vision will be 3.5 times slower to spot a potential hazard in the distance compared to a person with 20/20 vision.

    </string>
    <string name="info2050">
Your vision is estimated at 20/50 in this eye. The smallest letters read by somebody with 20/50 vision at 20 feet could be read at 50 feet by a person with normal (20/20) visual acuity.
Generally, in the US, individuals are required to wear corrective lenses if their vision is worse than 20/40 when driving to prevent automobile accidents. If you drive a vehicle, you should look into some form of visual aid.
Someone with 20/50 vision will be 2.5 times slower to spot a potential hazard in the distance compared to a person with 20/20 vision.

    </string>
    <string name="info2040">
Your vision is estimated at 20/40 in this eye. The smallest letters read by somebody with 20/40 vision at 20 feet could be read at 40 feet by a person with normal (20/20) visual acuity.
    </string>
    <string name="info2030">
Your vision is estimated at 20/30 in this eye. The smallest letters read by somebody with 20/30 vision at 20 feet could be read at 30 feet by a person with normal (20/20) visual acuity.
    </string>
    <string name="info2025">
Your vision is estimated at 20/25 in this eye. The smallest letters read by somebody with 20/25 vision at 20 feet could be read at 25 feet by a person with normal (20/20) visual acuity.
    </string>
    <string name="info2020">
Your vision is estimated at 20/20 or better in this eye. You see perfectly!
    </string>
    <string name="glasses_text">
        "<b>Cost</b>: The average cost for standard prescription glasses is around $196 in the US. However,"
        "this price can fluctuate considerably depending on the features you choose, as well as the"
        "quality of the glasses, and whether or not you have insurance. High-end glasses can run for up"
        "to $1000. On the other extreme, $10 can buy a very basic pair. If you want a decent pair that"
        "can last a while and you don’t have insurance be prepared to pay at least $100.\n\n"

    "Keep in mind that a formal eye exam is also required. Without insurance, the average cost of an"
        "eye exam is around $200. Retailers such as Costco offer a discounted rate of around $50 for an"
        "eyeglass exam, but this price is available only to members. In addition, it is good practice to "
        "periodically reexamine eyes. If your vision has changed, you may need to get new glasses. "
        "Most doctors recommend annual checkups. This is done to make sure your prescription is up to"
        "date, so keep that in mind, especially if your vision is prone to change. \n\n"

    "If you have insurance, the price usually drops considerably. Of course, every health insurance"
        "plan is unique, but generally speaking, eye exams as well as glasses should be covered with a"
        "minimal copay of around $25. Some policies may also give $100-$200 a year to spend on "
        "eyewear, which means your glasses could be completely covered if you choose a pair in that"
        "price range. Check your insurance policy to see what coverage you qualify for to help minimize"
        "your out of pocket expense. With smart planning, a patient’s out of pocket expenses for"
        "eyeglasses could become negligible. \n\n"

    "<b>Procurement Process</b>: A formal eye exam is required. You can see an optometrist for this. "
        "LensCrafters, Costco and PearleVision all offer walk-in appointments for an eye exam."
        "Once the eye exam is concluded, you will choose a frame. Make sure to choose a high quality"
        "frame that fits your face, and is comfortable. Frames which are too tight or too heavy may"
        "cause headaches when worn for extended periods. \n\n"

        "<b>Advantages: </b>\n"
"No recurring costs. Glasses can last a lifetime, barring a change in prescription or accident.\n"
"Safest, least invasive option. No surgery required.\n"
        "No risk of eye infection.\n"

        "<b>Disadvantages:</b>\n"
      "Poorly fitted, or low quality glasses may cause headaches.\n\n"

"Options: Lens can include UV filters, anti refractive treatments for driving, and flipdown sunglasses."

    </string>
    <string name="contact_text">
    "<b>Types:</b> There are several different types of contact lenses and it is important to know which"
        "kind of get based on your needs. \n"

"When it comes to material, there are soft lenses, silicone hydrogel lenses, gas permeable lenses,"
        "hybrid contact lenses and pmma lenses. 64% of contact lenses prescribed in the U.S. are silicone hydrogel"
        "lenses. This is most likely due to the porosity of the material, which allows oxygen to reach your eye, "
        "as well as the softness and comfort of the lenses. Gas permeable lenses are more rigid, "
        "while PMMA lenses do not transmit oxygen to the eye. \n\n"

"When it comes to wearing time, there are 3 major types: daily wear and extended wear. Daily wear contact"
        "lenses are meant to be used for a single day, put on in the morning and removed and disposed of at night."
        "Extended wear contact lenses can be worn for several days, usually around a week, without removal.\n\n"

"<b>Cost:</b> It depends on what kind you get. Daily wear contact lenses are usually sold in boxes with 30 pairs, "
        "retailing for around $30 a box. If you wear contact lenses everyday, you are looking at spending about"
        "$700 a year on contacts. \n\n"

"<b>Procurement Process:</b> Like eyeglasses, you will need to have an eye exam with an optometrist. There, "
        "they will determine your prescription, and give you the option of ordering contact lenses in your"
        "prescription. Make sure the expiration date is far away enough such that the lenses don’t expire "
        "before you use them.\n\n"

        "<b>Advantages:</b>\n"
        "Contact lenses move with your eye, allow a natural field of view, have no frames to obstruct your vision and greatly reduce distortions.\n"
"Unlike glasses, they do not fog up or get splattered by mud or rain.\n"
"Contact lenses are excellent for sports and other physical activities.\n"
"Many people feel they look better in contact lenses.\n"
"Compared to eyeglasses, they may offer better, more natural sight\n"

        "<b>Disadvantages:</b>\n"
"Compared with glasses, contact lenses require a longer initial examination and more follow-up visits to maintain eye health. Lens care also requires more time."
        "If you are going to wear your lenses successfully, you will have to clean and store them properly,"
        "adhere to lens-wearing schedules and make appointments for follow-up care."
        "If you are wearing disposable or planned replacement lenses, you will have to carefully follow "
        "the schedule for throwing away used lenses\n\n"
"<b>Safety Information:</b> Please be extremely diligent about cleaning and removing your lenses. "
        "There have been many cases of people developing eye infections, even going blind, from improper "
        "usage of contact lenses. One case involved a woman who left her daily use contact lenses in for"
        "several weeks, and ended up going blind from a parasitic infection. You should wash your hands "
        "before inserting, removing and adjusting contact lenses. If you are wearing extended or continuous "
        "wear lenses, make sure to purchase contact lens solution, as well as a contact lens container. "
        "Contact lens containers should be replaced every few months, due to build up of bacteria. "
        "Do not take any risks when it comes to your eyesight!\n\n"
</string>
    <string name="snellenButton">
        Snellen
    </string>
    <string name="floatingEButton">
        Tumbling E
    </string>
    <string name="testType">
        Select which test you would like to take
    </string>
    <string name="startTestWithInstructions">
        Instructions
    </string>
    <string name="startTestWithoutInstructions">
        Start Exam
    </string>
</resources>