<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout

        android:id="@+id/secondBtns"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_below="@id/firstBtns"
        android:layout_marginTop="100dp"
        android:visibility="invisible">

        <Button
            android:id="@+id/intstructionsBtn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:text="@string/startTestWithInstructions" />

        <Button
            android:id="@+id/startExamBtm"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:text="@string/startTestWithoutInstructions" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/firstBtns"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/testTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/testType"
            android:textSize="20sp" />

        <Button
            android:id="@+id/snellenButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:text="@string/snellenButton" />

        <Button
            android:id="@+id/tumblingButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:text="@string/floatingEButton" />

    </RelativeLayout>

</RelativeLayout>